<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="choicecream">Whipped Cream</string>
    <string name="choicechoc">Chocolate</string>
    <string name="quan">Quantity</string>
    <string name="ordersummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="Namkatranslations">Name:</string>
</resources>
