<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Name" />

        <TextView
            style="@style/Headerstyle"
            android:layout_marginLeft="16dp"
            android:text="@string/toppings"


            />

        <CheckBox
            android:id="@+id/cream_chk_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:text="@string/choicecream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_chk_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:text="@string/choicechoc"
            android:textSize="16sp" />


        <TextView
            style="@style/Headerstyle"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/quan"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="8dp"

                android:text="2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"

                android:onClick="increment"
                android:text="+" />
        </LinearLayout>


        <TextView
            style="@style/Headerstyle"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/ordersummary"
             />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"

            android:text="$0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />



    </LinearLayout>

</ScrollView>


